# gameboy

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.zig  deps.zig  gyro.zzz  meson.build
.cache/clangd/index/: main.c.5C6A7C19682BCD75.idx
roms/: CHANGELOG.md  README.md
roms/age-test-roms/div/: switch-speed-div-cgb.gb
roms/age-test-roms/sound/: switch-speed-ch2-lc-1-cgb.gb  switch-speed-ch2-lc-2-cgb.gb  switch-speed-ch2-lc-3-cgb.gb  switch-speed-ch2-lc-4-cgb.gb  switch-speed-ch2-lc-5-cgb.gb
roms/age-test-roms/tima/: switch-speed-tima-00-1-cgb.gb  switch-speed-tima-00-2-cgb.gb  switch-speed-tima-01-cgb.gb  switch-speed-tima-02-cgb.gb  switch-speed-tima-03-cgb.gb  switch-speed-tima-if-cgb.gb  switch-speed-tima-inc-cgb.gb
roms/cgb-acid-hell/: cgb-acid-hell.gbc
roms/gambatte/: cgb_bgp_dumper.gbc  cgb_objp_dumper.gbc  fexx_ffxx_dumper.gbc  fexx_read_reset_set_dumper.gbc  ioregs_reset_dumper.gbc  jpadirq_1.gbc  jpadirq_2.gbc  sram.gbc  vram_dumper.gbc  wram_dumper.gbc
roms/gambatte/bgen/: bgoff_bgon_sprite_above_window.gbc  bgoff_bgon_sprite_below_window.gbc
roms/gambatte/bgtiledata/: bgtiledata_spx08_1.gbc  bgtiledata_spx08_2.gbc  bgtiledata_spx08_3.gbc  bgtiledata_spx08_4.gbc  bgtiledata_spx08_ds_1.gbc  bgtiledata_spx08_ds_2.gbc  bgtiledata_spx08_ds_3.gbc  bgtiledata_spx08_ds_4.gbc  bgtiledata_spx09_1.gbc  bgtiledata_spx09_2.gbc  bgtiledata_spx09_3.gbc  bgtiledata_spx09_4.gbc  bgtiledata_spx09_ds_1.gbc  bgtiledata_spx09_ds_2.gbc  bgtiledata_spx09_ds_3.gbc  bgtiledata_spx09_ds_4.gbc  bgtiledata_spx0A_1.gbc  bgtiledata_spx0A_2.gbc  bgtiledata_spx0A_3.gbc  bgtiledata_spx0A_4.gbc  bgtiledata_spx0B_1.gbc  bgtiledata_spx0B_2.gbc  bgtiledata_spx0B_3.gbc  bgtiledata_spx0B_4.gbc
roms/gambatte/bgtilemap/: bgtilemap_spx08_1.gbc  bgtilemap_spx08_2.gbc  bgtilemap_spx08_3.gbc  bgtilemap_spx08_4.gbc  bgtilemap_spx08_ds_1.gbc  bgtilemap_spx08_ds_2.gbc  bgtilemap_spx08_ds_3.gbc  bgtilemap_spx08_ds_4.gbc  bgtilemap_spx09_1.gbc  (+15 more)
src/: Bus.zig  Cartridge.zig  Cpu.zig  Gameboy.zig  Ppu.zig  bus.c  bus.h  cartridge.c  cartridge.h  cartridge.rs  cpu.c  cpu.h  cpu.rs  cpu_utils.c  cpu_utils.h  decoder.c  decoder.h  gameboy.c  gameboy.h  gameboy.rs  gamegirl.c  gamegirl.h  instruction.c  instruction.h  main.c  main.rs  main.zig  memory.rs  ppu.c  ppu.h  ppu.rs  rom.h  unit_test.c  utils.c  utils.h  utils.rs  utils.zig
test/: cpu.c  disassembler.c  test_cpu.c
(+3688 files in other folders)
