[package]
name = "rustyboy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield = "0.11.2"
sdl2 = "0.34.5"
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1.12.0", features = ["sync", "rt-multi-thread"] }
